[package]
name = "frprs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
quinn = "0.11.9"
rcgen = "0.14.7"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio_kcp = "0.9.8"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "frps"
path = "src/bin/frps.rs"

[[bin]]
name = "frpc"
path = "src/bin/frpc.rs"
